[package]
name = "log_watcher_electric_boogaloo"
version = "0.1.0"
authors = ["Evaldas Tyla <evaldas.tyla@oc.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "*"
futures-util = "*"
lazy_static = "*"
futures-channel = "*"
hyper = "*"